      behavior if not used or implemented (for backwards compatibility); but sometimes this is
      not always possible especially when adding new features.

---------------------------------------------
25Sep2023
---------------------------------------------
changed converted help file to version 8 of helpndoc
added new code for use of helpndoc8
updated ProjectVersion=23.09.25.0
---------------------------------------------
23Sep2023
---------------------------------------------
updated Instructions.md

---------------------------------------------
21Sep2023
---------------------------------------------
added move old files to SetupSoldfies/folder on ftp site to script
added to !DistrPack.Project.cmd a prompt "Do you want to upload files with winscp at the end ..."
updated instructions for manually uploading of files
modified:   !DistrPack.Project.cmd for uploading files
modified:   !DistrPack.Project.cmd added time start and finish
added color messages with ansi
---------------------------------------------
21Sep2023
---------------------------------------------
updated Instructions.md with References

---------------------------------------------
20Sep2023
---------------------------------------------
added :LastOS Forum code to !DistrPack.Project.cmd for creating script file dor use with winscp
added code to !DistrPack.Project.cmd for auto upload to LastOSForum
added uploadlastos.cmd file to upload files to lastos Forum
added color and error capture to uploadlastos.cmd
added updfiles.cmd for update of #password# parameter in fileslastos.ini
added updfiles.cmd to gitignore to prevent upload to github
added 'Uploading using curl' for use with accounts.ini file in instructions.md
added fle structure in  blank_Accounts.ini file
modified:   Source.Code/SetupS-files.htm
modified:   !DistrPack.Project.cmd added date time of upload files

---------------------------------------------
17Sep2023
---------------------------------------------