@@ -1,0 +1,5 @@
+{
+    "recommendations": [
+        "shd101wyy.markdown-preview-enhanced"
+    ]
+}
